--- a/styleguide.html
+++ b/styleguide.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 
+<html lang="en">
 <head>
+    <title>styleguide</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
     <link rel="stylesheet" href="css/style.css">
@@ -9,7 +11,7 @@
 
 
 
-<html>
+
     <body style="display: flex; justify-content: center; align-items: center; flex-direction: column">
         
         <!--    NAVBAR    -->
@@ -147,7 +149,7 @@
                         </div>
                         <div class="form-box">
                                 <h4>Phone number</h4>
-                                <input type="number" name="phoneNumber" value="+ 1 432 555 00 44">
+                                <input type="tel" name="phoneNumber" placeholder="1 432 555 00 44">
                         </div>
                     </form>
                 </div>
@@ -165,4 +167,183 @@
                     <li class="pager__item"><a href="">9</a></li>
                     <Li class="pager__item"><a href="">&#62;</a></Li>
                 </ul>
+
+                <table class="detail-table">
+                        <tr class="detail-row">
+                            <th class="table-head">
+                                <div class="btn-box btn">
+                                    <span>Tracker name</span>
+                                    <i class="header__icon icon-arrow-up"></i>
+                                </div>
+                            </th>
+                            <th class="table-head">
+                                <div class="btn-box btn">
+                                    <span>Initiated date</span>
+                                    <i class="header__icon icon-arrow-up"></i>
+                                </div>
+                            </th>
+                            <th class="table-head">
+                                <div class="btn-box btn">
+                                    <span>Visits</span>
+                                    <i class="header__icon icon-arrow-up"></i>
+                                </div>
+                            </th>
+                            <th class="table-head">
+                                <div class="btn-box btn">
+                                    <span>Unique</span>
+                                    <i class="header__icon icon-arrow-up"></i>
+                                </div>
+                            </th>
+                            <th class="table-head">
+                                <div class="btn-box btn">
+                                    <span>Singups</span>
+                                    <i class="header__icon icon-arrow-up"></i>
+                                </div>
+                            </th>
+                            <th class="table-head">
+                                <div class="btn-box btn">
+                                    <span>FTD</span>
+                                    <i class="header__icon icon-arrow-up"></i>
+                                </div>
+                            </th>
+                            <th class="table-head">
+                                <div class="btn-box btn">
+                                    <span>Depositors</span>
+                                    <i class="header__icon icon-arrow-up"></i>
+                                </div>
+                            </th>
+                            <th class="table-head">
+                                <div class="btn-box btn">
+                                    <span>Deposits ($)</span>
+                                    <i class="header__icon icon-arrow-up"></i>
+                                </div>
+                            </th>
+                            <th class="table-head">
+                                <div class="btn-box btn">
+                                    <span>Payout ($)</span>
+                                    <i class="header__icon icon-arrow-up"></i>
+                                </div>
+                            </th>
+                            <th class="table-head">
+                                <div class="btn-box btn">
+                                    <span>Turnover</span>
+                                    <i class="header__icon icon-arrow-up"></i>
+                                </div>
+                            </th>
+                            <th class="table-head">
+                                <div class="btn-box btn">
+                                    <span>Deal</span>
+                                    <i class="header__icon icon-arrow-up"></i>
+                                </div>
+                            </th>
+                        </tr>
+                        <tr class="detail-row" id="detail-row1">
+                            <td class="detail__text">aff/sam_test</td>
+                            <td class="detail__text">17/08/02 (12:58)</td>
+                            <td class="detail__text">232</td>
+                            <td class="detail__text">114</td>
+                            <td class="detail__text">12</td>
+                            <td class="detail__text">6</td>
+                            <td class="detail__text">3</td>
+                            <td class="detail__text">34,425.00</td>
+                            <td class="detail__text">234.00</td>
+                            <td class="detail__text">421.342.00</td>
+                            <td class="detail__text">cpl (200)</td>
+                        </tr>
+                        <tr class="detail-row" id="detail-row2">
+                            <td class="detail__text">aff/leo_test</td>
+                            <td class="detail__text">15/08/02 (12:58)</td>
+                            <td class="detail__text">232</td>
+                            <td class="detail__text">114</td>
+                            <td class="detail__text">12</td>
+                            <td class="detail__text">6</td>
+                            <td class="detail__text">3</td>
+                            <td class="detail__text">34,425.00</td>
+                            <td class="detail__text">234.00</td>
+                            <td class="detail__text">421.342.00</td>
+                            <td class="detail__text">cpl (200)</td>
+                        </tr>
+                        <tr class="detail-row" id="detail-row3">
+                            <td class="detail__text">aff/sam_test</td>
+                            <td class="detail__text">17/08/02 (12:58)</td>
+                            <td class="detail__text">112</td>
+                            <td class="detail__text">100</td>
+                            <td class="detail__text">22</td>
+                            <td class="detail__text">4</td>
+                            <td class="detail__text">3</td>
+                            <td class="detail__text">22,415.00</td>
+                            <td class="detail__text">341.00</td>
+                            <td class="detail__text">522.342.00</td>
+                            <td class="detail__text">cpl (200)</td>
+                        </tr>
+                        <tr class="detail-row" id="detail-row4">
+                            <td class="detail__text">aff/leo_test</td>
+                            <td class="detail__text">33/08/02 (12:58)</td>
+                            <td class="detail__text">232</td>
+                            <td class="detail__text">114</td>
+                            <td class="detail__text">12</td>
+                            <td class="detail__text">6</td>
+                            <td class="detail__text">3</td>
+                            <td class="detail__text">34,425.00</td>
+                            <td class="detail__text">234.00</td>
+                            <td class="detail__text">421.342.00</td>
+                            <td class="detail__text">cpl (200)</td>
+                        </tr>
+                        <tr class="detail-row" id="detail-row5">
+                            <td class="detail__text">aff/sam_test</td>
+                            <td class="detail__text">17/08/02 (12:58)</td>
+                            <td class="detail__text">112</td>
+                            <td class="detail__text">100</td>
+                            <td class="detail__text">22</td>
+                            <td class="detail__text">4</td>
+                            <td class="detail__text">3</td>
+                            <td class="detail__text">22,415.00</td>
+                            <td class="detail__text">341.00</td>
+                            <td class="detail__text">522.342.00</td>
+                            <td class="detail__text">cpl (200)</td>
+                        </tr>
+                        <tr class="detail-row" id="detail-row6">
+                            <td class="detail__text">aff/leo_test</td>
+                            <td class="detail__text">13/08/02 (12:58)</td>
+                            <td class="detail__text">232</td>
+                            <td class="detail__text">114</td>
+                            <td class="detail__text">12</td>
+                            <td class="detail__text">6</td>
+                            <td class="detail__text">3</td>
+                            <td class="detail__text">34,425.00</td>
+                            <td class="detail__text">234.00</td>
+                            <td class="detail__text">421.342.00</td>
+                            <td class="detail__text">cpl (200)</td>
+                        </tr>
+                        <tr class="detail-row" id="detail-row7">
+                            <td class="detail__text">aff/sam_test</td>
+                            <td class="detail__text">17/08/02 (12:58)</td>
+                            <td class="detail__text">112</td>
+                            <td class="detail__text">100</td>
+                            <td class="detail__text">22</td>
+                            <td class="detail__text">4</td>
+                            <td class="detail__text">3</td>
+                            <td class="detail__text">22,415.00</td>
+                            <td class="detail__text">341.00</td>
+                            <td class="detail__text">522.342.00</td>
+                            <td class="detail__text">cpl (200)</td>
+                        </tr>
+                        <tr class="detail-row" id="detail-row8">
+                            <td class="detail__text">aff/leo_test</td>
+                            <td class="detail__text">19/08/02 (12:58)</td>
+                            <td class="detail__text">232</td>
+                            <td class="detail__text">111</td>
+                            <td class="detail__text">12</td>
+                            <td class="detail__text">6</td>
+                            <td class="detail__text">3</td>
+                            <td class="detail__text">34,425.00</td>
+                            <td class="detail__text">234.00</td>
+                            <td class="detail__text">421.342.00</td>
+                            <td class="detail__text">cpl (200)</td>
+                        </tr>
+                    </table>
+
+
 </body>
+</html>
+
