removed unused files

--- a/styleguide.html
+++ b/styleguide.html
@@ -22,47 +22,47 @@
     <h1>Colors</h1>
     <div class="clrs">
         <div>
-            <div class="color1"></div>
+            <div class="paragraph-color"></div>
             <p>paragraph <br>#605f5f</p>
         </div>
         <div>
-            <div class="color2"></div>
+            <div class="danger-color"></div>
             <p>danger <br>rgb(255, 0, 0);</p>
         </div>
         <div>
-            <div class="color3"></div>
+            <div class="secondary-color"></div>
             <p>secondary <br>#ADADAD</p>
         </div>
         <div>
-            <div class="color4"></div>
+            <div class="page-shadow-color"></div>
             <p>page shadow <br>#E3E3E3;</p>
         </div>
         <div>
-            <div class="color5"></div>
-            <p>detali<br> #f58220;</p>
+            <div class="detail-color"></div>
+            <p>detail<br> #f58220;</p>
         </div>
         <div>
-            <div class="color6"></div>
-            <p>detali hover <br>#FFa200;</p>
+            <div class="datail-hover-color"></div>
+            <p>detail hover <br>#FFa200;</p>
         </div>
         <div>
-            <div class="color7"></div>
+            <div class="user-color"></div>
             <p>user color<br> #56819f;</p>
         </div>
         <div>
-            <div class="color8"></div>
+            <div class="user-hover-color"></div>
             <p>user hover<br> #7ec9ff;</p>
         </div>
         <div>
-            <div class="color9"></div>
+            <div class="primary-icon-color"></div>
             <p>primary icon <br>#f5f5f2;</p>
         </div>
         <div>
-            <div class="color10"></div>
+            <div class="paragraph-dark-color"></div>
             <p>paragraph dark<br> #696969;</p>
         </div>
         <div>
-            <div class="color11"></div>
+            <div class="active-green-color"></div>
             <p>active green <br>rgb(2, 158, 2);</p>
         </div>
 
