--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
 
     <div class="topbar">
         <div class="element">
-            <span class="element__icon  icon--borderLeft icon-wallet"></span>
+            <span class="element__icon  separator icon-wallet"></span>
             <span class="element__cash">$1,500.00</span>
-            <span class="element__icon icon--borderRight icon-arrow-down-small"></span>
-            <span class="element__icon icon--borderRight icon-notification"></span>
+            <span class="element__icon separator icon-arrow-down-small"></span>
+            <span class="element__icon separator icon-notification"></span>
             <span class="element__icon icon-profile"></span>
             <span class="element__username">Leonardo Dicaprio</span>
-            <span class="element__icon icon--borderLeft icon-quit"></span>
+            <span class="element__icon separator icon-quit"></span>
         </div>
     </div>
 
@@ -107,23 +107,6 @@
                     </div>
                 </div>
             </div>
-            <!--<div class="chart">
-                <h3>Earnigns chart</h3>
-                <div class="boxChart">
-                    <div class="btn">
-                        <span class="btn__dot"></span>
-                        <h3>Signups</h3>
-                    </div>
-                    <div class="btn">
-                        <span class="btn__dot dot--orange"></span>
-                        <h3>FTD</h3>
-                    </div>
-                    <div class="btn btn--earned">
-                        <span class="btn__dot dot--green"></span>
-                        <h3>Earned</h3>
-                    </div>
-                </div>
-            </div>-->
             <div class="diagram">
                 <canvas id="myChart"></canvas>
             </div>
@@ -562,13 +545,13 @@
                     <div class="caddy-element element--borderBottom">
                         <span class="element__icon icon-wallet"></span>
                         <span class="element__cash">$1,500.00</span>
-                        <span class="element__icon icon--borderRight icon-arrow-down-small"></span>
+                        <span class="element__icon separator icon-arrow-down-small"></span>
                         <span class="element__icon icon-notification"></span>
                     </div>
                     <div class="caddy-element">
                         <span class="element__icon icon-profile"></span>
                         <span class="element__username">Leonardo Dicaprio</span>
-                        <span class="element__icon icon--borderLeft icon-quit"></span>
+                        <span class="element__icon separator icon-quit"></span>
                     </div>
 
                 </div>
