latest update on styleguide file

--- a/styleguide.html
+++ b/styleguide.html
@@ -146,7 +146,14 @@
     <br><br>
     <h1>Input Field</h1>
     <br>
-    <input type="text" name="firstname" placeholder="Leonardo" required minlength="2" maxlength="16">
+    <input type="text" name="firstname" placeholder="" required minlength="2" maxlength="16">
+    <p>input plane</p>
+    <br>
+    <input type="text" class="input-accepted" name="firstname" placeholder="Leonardo" required minlength="2" maxlength="16">
+    <p>input accepted</p>
+    <br>
+    <input type="text" class="input-declined" name="firstname" placeholder="" required minlength="2" maxlength="16">
+    <p>input declined</p>
     <br><br>
     <h1>Icons</h1>
     <br>
@@ -165,6 +172,13 @@
         <span class="icon-details"></span>
         <span class="icon-general"></span>
     </div>
+    <br><br>
+    <h1>Unordered List</h1><br>
+    <ul>
+        <li>list item</li>
+        <li>list item</li>
+        <li>list item</li>
+    </ul>
     <br><br>
 
 
